--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,9 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=2.0.1
+forge_version=1.19.2-43.2.0
+mod_version=2.0.2
+mc_version=1.19.2
+jei_version=11.5.2.1007
+curio_version=5.1.1.0
+patchouli_version=77
