--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ modId="goety"
 version="${file.jarVersion}"
 displayName="Goety"
 displayURL="https://github.com/Polarice3/Goety-2"
-logoFile="examplemod.png"
+logoFile="Goety.png" #optional
 credits="Tutorial/Help: Technovision, Cy4's Modding, TelepathicGrunt, diesieben07."
 authors="Polarice3"
 description='''
