--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ version="${file.jarVersion}"
 displayName="Goety"
 displayURL="https://github.com/Polarice3/Goety-2"
 logoFile="Goety.png" #optional
-credits="Tutorial/Help: Technovision, Cy4's Modding, TelepathicGrunt, diesieben07."
+credits="Tutorial/Help: Technovision, Cy4's Modding, TelepathicGrunt, diesieben07. Bug Testing: Mich705"
 authors="Polarice3"
 description='''
 Goety adds a bunch of new Mobs that can help or hinder players and a magic system that can provides a player a different way of combat!
