--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,16 @@ plugins {
     id 'eclipse'
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
 version = "${mod_version}"
 group = 'com.Polarice3.Goety' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'Goety'
+
+mixin {
+    add sourceSets.main, "goety.refmap.json"
+}
 
 repositories {
     maven {
@@ -49,12 +54,15 @@ minecraft {
         client {
             workingDirectory project.file('run')
 
+            property 'mixin.env.disableRefMap', 'true'
+
             property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
+            arg '-mixin.config=goety.mixins.json'
 
             mods {
                 goety {
@@ -67,6 +75,14 @@ minecraft {
             workingDirectory project.file('run')
 
             property 'mixin.env.disableRefMap', 'true'
+
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            property 'forge.logging.console.level', 'debug'
+
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
+            arg '-mixin.config=goety.mixins.json'
 
             mods {
                 goety {
@@ -86,6 +102,8 @@ minecraft {
 
             args '--mod', 'goety', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
+            arg '-mixin.config=goety.mixins.json'
+
             mods {
                 goety {
                     source sourceSets.main
@@ -99,6 +117,7 @@ sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${forge_version}"
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     //JEI
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
@@ -127,7 +146,8 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 "Implementation-Vendor"   : "Polarice3",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs": "goety.mixins.json"
         ])
     }
 }
