--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,13 @@ pluginManagement {
     repositories {
         gradlePluginPortal()
         maven { url = 'https://maven.minecraftforge.net/' }
+        maven { url = "https://repo.spongepowered.org/repository/maven-public/" }
+    }
+    resolutionStrategy {
+        eachPlugin {
+            if (it.requested.id.namespace == 'org.spongepowered') {
+                it.useModule('org.spongepowered:mixingradle:0.7-SNAPSHOT')
+            }
+        }
     }
 }
