--- a/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/crafts/undead_knowledge.json
+++ b/src/main/resources/data/goety/patchouli_books/black_book/en_us/entries/crafts/undead_knowledge.json
@@ -7,7 +7,7 @@
   "pages": [
     {
       "type": "patchouli:text",
-      "text": "The echoes of the dead and the remnant thoughts within the Nether could hold some secrets towards a dark power. With the power of fresh brains and some necroturgy, you are able to create a piece of a dark, and sinister power."
+      "text": "The echoes of the dead and the remnant thoughts within the Nether could hold some secrets towards a dark power. With the power of echo shards and some necroturgy, you are able to create a piece of a dark, and sinister power."
     },
     {
       "type": "goety:ritual",
