--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,5 +3,6 @@ public-f net.minecraft.world.item.AxeItem f_150683_ #strippables
 public-f net.minecraft.world.entity.LivingEntity f_20943_
 public-f net.minecraft.world.entity.Mob f_21347_
 public-f net.minecraft.world.entity.Mob f_21348_
+public-f net.minecraft.world.entity.decoration.Painting f_218870_
 public-f net.minecraft.world.level.block.SaplingBlock f_55975_
 public-f net.minecraft.world.level.block.DispenserBlock f_52661_
