--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,6 @@ repositories {
         url = "https://maven.theillusivec4.top/"
     }
     maven {
-        name = "Progwml6 maven/JEI"
-        url = "https://dvs1.progwml6.com/files/maven/"
-    }
-    maven {
         name = "ModMaven"
         url = "https://modmaven.dev"
     }
@@ -138,6 +134,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:yeetus-635427:3909789")
     runtimeOnly fg.deobf("curse.maven:jeed-532286:4599099")
     runtimeOnly fg.deobf("curse.maven:worldedit-225608:3922622")
+    runtimeOnly fg.deobf("curse.maven:spark-361579:4057111")
 }
 
 jar {
