Replace Right-click to outright hit to command Servants.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,3 +6,4 @@ public-f net.minecraft.world.entity.Mob f_21348_
 public-f net.minecraft.world.entity.decoration.Painting f_218870_
 public-f net.minecraft.world.level.block.SaplingBlock f_55975_
 public-f net.minecraft.world.level.block.DispenserBlock f_52661_
+public-f net.minecraft.world.entity.raid.Raid f_37686_
