--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,9 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:jeed-532286:4599099")
     runtimeOnly fg.deobf("curse.maven:worldedit-225608:3922622")
     runtimeOnly fg.deobf("curse.maven:spark-361579:4057111")
-    runtimeOnly fg.deobf("curse.maven:angelring-333396:4641784")
+    runtimeOnly fg.deobf("curse.maven:puzzles-lib-495476:4600775")
+    runtimeOnly fg.deobf("curse.maven:mutant-monsters-852665:4569847")
+    runtimeOnly fg.deobf("curse.maven:mob-battle-mod-268746:3952789")
 }
 
 jar {
