--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:yeetus-635427:4680832")
     runtimeOnly fg.deobf("curse.maven:jeed-532286:4599236")
     runtimeOnly fg.deobf("curse.maven:worldedit-225608:4586218")
+    runtimeOnly fg.deobf("curse.maven:mob-battle-mod-268746:4748521")
+    runtimeOnly fg.deobf("curse.maven:better-third-person-435044:4596768")
 }
 
 tasks.named('jar', Jar).configure {
