--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ dependencies {
 
     //Testing Only
     runtimeOnly fg.deobf("curse.maven:jade-324717:4433884")
-    runtimeOnly fg.deobf("curse.maven:nbttool-451553:3879898")
+    runtimeOnly fg.deobf("curse.maven:kiwi-303657:4937343")
     runtimeOnly fg.deobf("curse.maven:yeetus-635427:3909789")
     runtimeOnly fg.deobf("curse.maven:jeed-532286:4599099")
     runtimeOnly fg.deobf("curse.maven:worldedit-225608:3922622")
