Organized Spell config a bit and added more new spells.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public-f net.minecraft.world.level.block.SaplingBlock f_55975_
 public-f net.minecraft.world.level.block.DispenserBlock f_52661_
 public net.minecraft.world.entity.Entity f_19853_ #level
 public net.minecraft.server.level.ServerEntity f_8509_ #level
+public-f net.minecraft.world.level.block.entity.DecoratedPotPatterns f_271367_
