--- a/build.gradle
+++ b/build.gradle
@@ -145,6 +145,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:ydms-custom-camera-view-592245:4601457")
     runtimeOnly fg.deobf("curse.maven:tslateffectslib-700382:4744867")
     runtimeOnly fg.deobf("curse.maven:tslatentitystatus-tes-830420:4746281")
+    runtimeOnly fg.deobf("curse.maven:kiwi-303657:4688568")
 }
 
 tasks.named('jar', Jar).configure {
