Players can move while wheels are up and Robe resistances are configurable.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
 loaderVersion="[47,)"
-license="All rights reserved"
+license="${mod_license}"
 [[mods]]
 modId="goety"
 version="${file.jarVersion}"
