--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,6 +1,8 @@
 public-f net.minecraft.world.level.Explosion *
 public-f net.minecraft.world.item.AxeItem f_150683_ #strippables
 public net.minecraft.world.entity.Entity f_19815_ # dimensions
+public net.minecraft.world.entity.projectile.Projectile f_37246_
+public net.minecraft.world.entity.projectile.Projectile f_150164_
 public-f net.minecraft.world.entity.LivingEntity f_20943_
 public-f net.minecraft.world.entity.Mob f_21347_
 public-f net.minecraft.world.entity.Mob f_21348_
