Fixed Server bug and added some advancements.

--- a/src/main/resources/data/goety/loot_tables/chests/dark_manor_treasure.json
+++ b/src/main/resources/data/goety/loot_tables/chests/dark_manor_treasure.json
@@ -228,16 +228,16 @@
           "type": "minecraft:item",
           "functions": [
             {
-              "function": "minecraft:exploration_map",
               "decoration": "target_point",
-              "destination": "goety:explorer_maps/ancient_city",
+              "function": "minecraft:exploration_map",
+              "destination": "goety:explorer_maps/crypt",
               "zoom": 1,
               "skip_existing_chunks": true
             },
             {
               "function": "minecraft:set_name",
               "name": {
-                "translate": "filled_map.goety.ancient_city"
+                "translate": "filled_map.goety.crypt"
               }
             }
           ],
