--- a/build.gradle
+++ b/build.gradle
@@ -142,6 +142,7 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:mob-battle-mod-268746:3952789")
     runtimeOnly fg.deobf("curse.maven:configured-457570:4462837")
     runtimeOnly fg.deobf("curse.maven:wiki-zoomer-383277:4036651")
+    runtimeOnly fg.deobf("curse.maven:illage-and-spillage-576368:4263798")
 }
 
 jar {
