--- a/src/main/resources/data/goety/recipes/convert_black_wolf_to_black_beast.json
+++ b/src/main/resources/data/goety/recipes/convert_black_wolf_to_black_beast.json
@@ -1,6 +1,6 @@
 {
   "type": "goety:ritual",
-  "ritual_type": "goety:convert_complete_tamed",
+  "ritual_type": "goety:convert_tamed",
   "activation_item": {
     "item": "goety:shadow_essence"
   },
